2013-11-03  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.01.
	* src/pin-cir.c: Chatter fix to 200ms.
	* src/main.c: Fix bDeviceState.

2013-11-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_lld.h, src/usb_stm32f103.c (std_get_descriptor): Change
	the API of usb_cb_get_descriptor.
	* src/usb_desc.c: Follow the change.
	* src/usb_conf.h: Modify for CCID INT and HID usage.

2013-11-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/pin-cir.c: Port to Chopstx.

	* chopstx: Update.
	* src/configure (TIM_SIZE, EXT_SIZE): New.
	* src/gnuk.ld.in (__process6_stack_size__)
	(__process7_stack_size__): New.
	* src/main.c (main): Call cir_init.
	* src/openpgp.c (openpgp_card_thread): Rename from GPGthread.
	* src/usb-icc.c (icc_power_on): Follow the change.

2013-11-01  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.c: Update from Chopstx.
	* src/usb_lld.h: Remove interrupt definition.
	* src/stm32f103.h: Add AFIO, EXTI, and TIMER constants.

2013-10-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Call msc_init before USB interrupt thread.
	* src/gnuk.h, src/usb-msc.h, src/usb-msc.c, src/pin-dnd.c: Port to
	Chipstx.
	* src/openpgp.c (get_pinpad_input): Follow the change.
	* src/usb_ctrl.c (gnuk_setup_endpoints_for_interface): Don't stall
	RX of ENDP6.

2013-10-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (DEFS): Add -DCHX_PRIO_MAIN=5 for LED blink.
	* src/main.c (PRIO_CCID): It's now 3 (was: 2).

2013-10-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (.gnuk_flash): Three pages for three keys.
	* src/flash.c (FLASH_KEYSTORE_SIZE): Likewise.
	(flash_keystore_release): Remove.
	(flash_key_fill_zero_as_released)
	(flash_check_all_other_keys_released, flash_key_release): New.
	(flash_init, flash_key_alloc): New method to handle free space.
	* src/openpgp-do.c (fetch_four_bytes): New.
	(gpg_do_load_prvkey, gpg_do_delete_prvkey, gpg_do_public_key): Use
	fetch_four_bytes.
	(gpg_do_delete_prvkey): Call flash_key_release.
